k8s/standard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-watchdog
#  namespace: watchdog # replace with your ns
  labels:
    app: crypto-watchdog
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: crypto-watchdog
  template:
    metadata:
      labels:
        app: crypto-watchdog
    spec:
      containers:
      - name: crypto-watchdog
        image: hhaluk/crypto-watchdog:0.4.1
        resources:
          requests:
            memory: "32Mi"
            cpu: "250m"
          limits:
            memory: "64Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /crypto-watchdog/health
            port: 3000
        imagePullPolicy: Always
      serviceAccountName: default
